--- a/requirements-api.txt
+++ b/requirements-api.txt
@@ -7,7 +7,7 @@ gunicorn==21.2.0
 pydantic==2.9.0
 
 # ML & Data Science
-scikit-learn==1.3.2
+scikit-learn==1.5.2
 pandas==2.1.4
 numpy==1.26.2
 joblib==1.3.2
@@ -15,3 +15,7 @@ joblib==1.3.2
 # Feature Engineering
 geopy==2.4.1
 python-dateutil==2.9.0
+
+# Database
+psycopg2-binary==2.9.9
+redis==5.0.1
