feat(models): add pre-trained models to repository
DECISION: Committing trained models for portfolio demo

RATIONALE:
- Models are small (~5-10MB each)
- Project is portfolio/demo, not production
- Enables immediate 'git clone + docker-compose up' experience
- No frequent retraining expected
- Simplifies setup for recruiters/visitors

MODELS INCLUDED:
- isolation_forest.joblib (71.6% recall)
- scaler.joblib (StandardScaler)

TRAINING DATA:
- 300k synthetic transactions
- 735 fraud cases (5 types)
- 17 contextual features

If models grow larger in future, will migrate to:
- Git LFS for version control
- GitHub Releases for distribution

Updated .gitignore to allow these specific files.

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ data/processed/*.csv
 *.pkl
 *.h5
 
+# Except pre-trained models (for portfolio demo)
+!models/isolation_forest.joblib
+!models/scaler.joblib
+
 # VS Code
 .vscode/
 *.code-workspace
